@@ -4,6 +4,7 @@ Revision history for DBIx::Class
         - Minor bugfix to new (Row.pm)
         - Schema doesn't die if it can't load a class (Schema.pm)
         - New UUID columns plugin (UUIDColumns.pm)
+	- Documentation improvements.
 
 0.03001 2005-09-23 14:00:00
         - Fixes to relationship helpers
